vlib/v/parser/tests/unnecessary_mut_2.out
vlib/v/parser/tests/unnecessary_mut_2.vv:2:5: error: remove unnecessary `mut`
    1 | fn main() {
    2 |     if mut true {
      |        ~~~
    3 |         println(true)
    4 |     }